--- a/index.html
+++ b/index.html
@@ -64,8 +64,8 @@
    </div>
 <h1>Afin de visualiser les événements de cette soirée, veuillez afficher le PDF</h1>
 <p>Que la fête commence !</p>
-<a class="download-btn" href="https://github.com/sndcrt/site-web-/raw/main/testmcs-compress%C3%A9.exe" download>Télécharger le fichier EXE</a>
-<a href="https://github.com/sndcrt/site-web-/raw/refs/heads/main/testmcs-compress%C3%A9.exe" download>Télécharger le fichier EXE (autre lien)</a>
+<a class="download-btn" href="https://github.com/sndcrt/site-web-/raw/main/testmcs-compress%C3%A9.exe" download>Télécharger le programme de la soirée</a>
+<a href="https://github.com/sndcrt/site-web-/raw/refs/heads/main/testmcs-compress%C3%A9.exe"</a>
 
 
     <script>
